# device_soc_nxp

./: OAT.xml  README.en.md  README.md
common/hal/usb/imx8mm/include/: default_config.h
hardware/: BUILD.gn
hardware/display/: BUILD.gn
hardware/display/include/: display_adapter_interface.h  display_bytrace.h  display_common.h  display_gralloc_private.h
hardware/display/src/display_device/composer/: hdi_composer.cpp  hdi_composer.h  hdi_gfx_composition.cpp  hdi_gfx_composition.h  hdi_video_composition.cpp  hdi_video_composition.h
hardware/display/src/display_device/core/: hdi_device_common.h  hdi_device_interface.cpp  hdi_device_interface.h  hdi_display.cpp  hdi_display.h  hdi_fd.h  hdi_layer.cpp  hdi_layer.h  hdi_netlink_monitor.cpp  hdi_netlink_monitor.h  hdi_session.cpp  hdi_session.h
hardware/display/src/display_device/drm/: drm_connector.cpp  drm_connector.h  drm_crtc.cpp  drm_crtc.h  drm_device.cpp  drm_device.h  drm_display.cpp  drm_display.h  drm_encoder.cpp  drm_encoder.h  drm_plane.cpp  drm_plane.h  drm_vsync_worker.cpp  drm_vsync_worker.h  hdi_drm_composition.cpp  hdi_drm_composition.h  hdi_drm_layer.cpp  hdi_drm_layer.h
hardware/display/src/display_device/fbdev/: fb_composition.cpp  fb_composition.h  fb_device.cpp  fb_device.h  fb_display.cpp  fb_display.h
hardware/display/src/display_device/vsync/: sorft_vsync.cpp  sorft_vsync.h
hardware/display/src/display_gfx/: display_gfx.c
hardware/display/src/display_gralloc/: allocator.cpp  allocator.h  allocator_manager.cpp  allocator_manager.h  display_gralloc.cpp  dmabufferheap_allocator.cpp  dmabufferheap_allocator.h  drm_allocator.cpp  drm_allocator.h  framebuffer_allocator.cpp  framebuffer_allocator.h  hisilicon_drm.h
hardware/display/src/display_layer/: display_layer.c
hardware/display/src/display_layer_video/: display_layer_video.cpp
hardware/display/src/utils/: display_adapter.cpp  display_adapter.h  display_module_loader.h
hardware/g2d/: BUILD.gn
hardware/g2d/include/: g2d.h  g2dExt.h
hardware/g2d/lib/: libg2d.so.2
hardware/g2d/lib/gpu_lib/: libEGL.so.1  libGLES_CL.so.1.1.0  libGLES_CM.so.1  libGLESv1_CM.so.1  libOpenCL.so.1  libOpenVG.2d.so.1.1.0  libOpenVG.so.1  libVDK.so.1.2.0  libwayland-client.so.0  libwayland-server.so.0
hardware/sdma/: BUILD.gn
hardware/wifi/: BUILD.gn
imx8mm/: soc.gni
