# Copyright© 2021–2022 Beijing OSWare Technology Co., Ltd
# This file contains confidential and proprietary information of
# OSWare Technology Co., Ltd
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

ohos_prebuilt_etc("firmware_apsta_bin") {
  source = "//device/soc/nxp/hardware/wifi/ap6xxx/fw_bcm43438a1_apsta.bin"
  module_install_dir = "./etc/wifi"
  install_images = [ "system" ]
  part_name = "osware_products"
}

ohos_prebuilt_etc("firmware_p2p_bin") {
  source = "//device/soc/nxp/hardware/wifi/ap6xxx/fw_bcm43438a1_p2p.bin"
  module_install_dir = "./etc/wifi"
  install_images = [ "system" ]
  part_name = "osware_products"
}

ohos_prebuilt_etc("firmware_bin") {
  source = "//device/soc/nxp/hardware/wifi/ap6xxx/fw_bcm43438a1.bin"
  module_install_dir = "./etc/wifi"
  install_images = [ "system" ]
  part_name = "osware_products"
}

ohos_prebuilt_etc("firmware_a_nvram") {
  source = "//device/soc/nxp/hardware/wifi/ap6xxx/nvram_ap6212a.txt"
  module_install_dir = "./etc/wifi"
  install_images = [ "system" ]
  part_name = "osware_products"
}

ohos_prebuilt_etc("firmware_hcd") {
  source = "//device/soc/nxp/hardware/wifi/ap6xxx/bcm43438a1.hcd"
  module_install_dir = "./etc/wifi"
  install_images = [ "system" ]
  part_name = "osware_products"
}

group("ap6xxx") {
  deps = [
    ":firmware_apsta_bin",
    ":firmware_p2p_bin",
    ":firmware_bin",
    ":firmware_a_nvram",
    ":firmware_hcd",
  ]
}
